Refactor project structure

--- a/centos7-sshd/Dockerfile
+++ b/centos7-sshd/Dockerfile
@@ -20,12 +20,12 @@ RUN echo "${SSH_USER} ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 
 # Populate user's home directory with SSH authorized public keys.
 RUN mkdir -p "/home/${SSH_USER}/.ssh"
-ADD authorized_keys "/home/${SSH_USER}/.ssh/authorized_keys"
+ADD secrets/authorized_keys "/home/${SSH_USER}/.ssh/authorized_keys"
 RUN chown -R "${SSH_USER}":"${SSH_USER}" "/home/${SSH_USER}/.ssh"
 RUN chmod 700 "/home/${SSH_USER}/.ssh"
 
 # Swap default SSH config file with a security tweaked one.
-COPY sshd_config /etc/ssh/sshd_config
+COPY files/sshd_config /etc/ssh/sshd_config
 
 EXPOSE 22
 CMD    ["/usr/sbin/sshd", "-D"]
